--- a/fclient/app/src/main/res/layout/activity_main.xml
+++ b/fclient/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
     <Button
         android:id="@+id/btnHttp"
         android:layout_width="wrap_content"
@@ -44,3 +45,4 @@
         app:layout_constraintVertical_bias="0.614"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
